--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ authors = ["Sam Cutler <sam92cutler@hotmail.co.uk>"]
 [dependencies.backend_sdl]
 path = "src/backend_sdl"
 
+[dependencies]
+time = "0.1.32"
